@@ -8,6 +8,12 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Added error-handling for Stories that return a zero-length string when
+previewed/published.  [Peter]
+
+
+=item *
+
 Upgraded L<Imager> to 0.44 from 0.43, which fixes a bug involving
 thumbnailing of extreme-aspect-ratio images. [Peter]
 
